--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
         </main>
         
         <div class="bottom-text">
-            Hunter's Cached HTML Launcher
+            Hunter's Cached HTML Launcher (GitHub Edition)
         </div>
         <footer>
             <div class="button-cont">
