--- a/old.html
+++ b/old.html
@@ -15,7 +15,8 @@
   Hunter's Cached HTML Launcher<br>
   Important info: There is no longer a dropdown menu. Your application's main HTML file must be named "index.html"<br>
   <button onclick='window.location.href="/"'>Back to menu</button>
-  <button id="fileupload" onclick="getDir()">Select local directory</button>
+  <button id="fileupload" onclick="getDir()">Select local directory</button><br>
+  Or, load an HCHL/zip file:
   <input id="zipupload" type="file" onchange="getZip()"></input>
   <br>
   <code id="finished" style="display: none">Data loaded! You can now return to the menu.</code>
@@ -198,7 +199,7 @@
                   });
                   counter++
                   if (counter === numberOfCallbacks) {
-                    alert("done")
+                    alert("File finished loading! You can now return to the menu.")
                     //loadHTML()
                   }
                 })
