--- a/old.html
+++ b/old.html
@@ -16,7 +16,7 @@
   Important info: There is no longer a dropdown menu. Your application's main HTML file must be named "index.html"<br>
   <button onclick='window.location.href="/"'>Back to menu</button>
   <button id="fileupload" onclick="getDir()">Select local directory</button><br>
-  Or, load an HCHL/zip file:
+  Or, load an HCHL/zip file:<br>
   <input id="zipupload" type="file" onchange="getZip()"></input>
   <br>
   <code id="finished" style="display: none">Data loaded! You can now return to the menu.</code>
