--- a/index.html
+++ b/index.html
@@ -525,6 +525,18 @@
             loadHTML("pwa-assets")
         });
       }
+        navigator.serviceWorker.addEventListener('message', function(event) {
+          if (event.data === "reload the damn page") {
+		  fetch("index.html")
+        .then(response => response.text())
+        .then((response) => {
+          document.open()
+          document.write(response)
+          document.close()
+      })
+      .catch(err => console.log(err))
+	  }
+        });
         document.addEventListener("DOMContentLoaded", event => {
           let launchURL
           let channelURL="empty_channel.png"
