--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
       }
         navigator.serviceWorker.addEventListener('message', function(event) {
           if (event.data === "reload the damn page") {
-		  audioObj.stop()
+		  audioObj.pause()
 		  fetch("index.html")
         .then(response => response.text())
         .then((response) => {
