testing header change on cache

--- a/old.html
+++ b/old.html
@@ -155,7 +155,14 @@
       for await(let handle of dirHandle.values()){
         if (handle.kind === "file") {
           let fileData = await handle.getFile();
-          let response = new Response(fileData)
+
+          const newHeaders = new Headers();
+          newHeaders.set("Cross-Origin-Embedder-Policy", "require-corp");
+          newHeaders.set("Cross-Origin-Opener-Policy", "same-origin");
+
+          let response = new Response(fileData, {
+            headers: newHeaders
+          });
           if (fileData.name === "hchl_channel.png" || fileData.name === "hchl_channel.gif") {
             storeChannel("hchl_"+cache_name,fileData)
           }
